Migrate authentication to JWT and update clients
Replace session-based authentication with stateless JWT: add JwtUtil and JwtAuthFilter, generate token on login, and propagate Authentication principal to controllers/services. Update SecurityConfig to use the JWT filter, enable STATELESS sessions, and expand allowed CORS origins. Frontend: introduce apiClient that injects Authorization Bearer token from localStorage, replace many direct axios calls with apiClient, save token on login and set AuthContext accordingly, and adjust PDF fetch to forward Authorization. Add jjwt dependencies to pom, deprecate SessionAuthFilter, and update repository/DTOs (UserResponseDTO now holds token). Misc: remove several sample PDF files and a Table component, update .gitignore, improve BookRepository queries to eager-load category, and tweak Vite proxy URL.